<resources>
    <string name="app_name">RpnCalc</string>
    <string name="numberButton1">1</string>
    <string name="numberButton2">2</string>
    <string name="numberButton3">3</string>
    <string name="numberButton9">9</string>
    <string name="numberButton8">8</string>
    <string name="numberButton7">7</string>
    <string name="numberButton6">6</string>
    <string name="numberButton5">5</string>
    <string name="numberButton4">4</string>
    <string name="actionButtonBack">\u232b</string>
    <string name="actionButtonDot">.</string>
    <string name="numberButton0">0</string>
    <string name="actionButtonEnter">\u23ce</string>
    <string name="actionButtonPlus">+</string>
    <string name="actionButtonMinus">-</string>
    <string name="actionButtonDivide">\u00f7</string>
    <string name="actionButtonMultiply">\u00d7</string>
    <string name="actionButtonSqrt">√</string>
    <string name="actionButtonPower">^</string>
    <string name="actionButtonAC">AC</string>
    <string name="actionButtonChangeSign">±</string>
    <string name="actionButtonSwap">⇄</string>
    <string name="actionButtonDrop">⇩</string>
    <string name="stackLabel1">1:</string>
    <string name="stackLabel3">3:</string>
    <string name="stackLabel4">4:</string>
    <string name="stackLabel2">2:</string>
    <string name="settingsButton">\u2838</string>
    <string name="closeSettingsButton">×</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_precisionText">Number of fraction digits</string>
    <string name="precisionPlaceholder">Precision</string>
    <string name="saveButton">Save</string>
    <string name="colorPlaceholder">Color</string>
    <string name="settings_colorText">Accent color</string>
</resources>